@startuml

title __ACCOUNTMANAGER's Class Diagram__\n

  namespace DBClasses {
    class DBClasses.Total {
    }
  }
  

  namespace DBClasses {
    abstract class DBClasses.Transaction {
    }
  }
  

  namespace DBClasses {
    abstract class DBClasses.Withdrawl {
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  DBClasses.Withdrawl -up-|> DBClasses.Transaction
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
